Added a Drawer table in the database and gave it a location index field. Added a Drawer view and support for populating drawers with items from the database.  Added support for customizing furniture so that a user can select specific drawers within a grid instead of the entire thing.